--- a/src/templates/pages/admin/admin_podcast_detail.html
+++ b/src/templates/pages/admin/admin_podcast_detail.html
@@ -9,14 +9,7 @@
       hx-include="[name=episode_name]" hx-swap="none">
   </div>
 
-  <div class="w-full sm:p-0 sm:m-0 mx-auto-2 lg:px-0">
-    <div id="audio-player-container">
-      <audio id="audio-player" controls class="w-full">
-        <source src="{{audioUrl}}" type="audio/mpeg">
-        Your browser does not support the audio element.
-      </audio>
-    </div>
-  </div>
+  {{> media_component media}}
   <div class="my-4">
     <h2 class="text-2xl">Time codes</h2>
     <div id="timecodes-list" class="grid grid-cols-1 gap-4 py-2">
