--- a/src/templates/widgets/media_component.html
+++ b/src/templates/widgets/media_component.html
@@ -22,7 +22,7 @@
 
 {{#if showUploadVideoButton}}
 <div class="w-full">
-  <form action="{{uploadUrl}}" method="POST" enctype="multipart/form-data">
+  <form action="{{uploadUrl}}" method="POST" enctype="multipart/form-data" hx-post="{{uploadUrl}}" hx-swap="outerHTML">
     <input type="file" name="video" accept=".mov" required />
     <button type="submit" class="common-button w-full px-4 py-2 my-2 transition-all duration-300 ease-in-out">Upload
       Video</button>
