--- a/src/templates/widgets/media_component.html
+++ b/src/templates/widgets/media_component.html
@@ -1,36 +1,39 @@
-{{#if showAudio}}
-<div class="w-full sm:p-0 sm:m-0 mx-auto-2 lg:px-0">
-  <div id="audio-player-container">
-    <audio id="audio-player" controls class="w-full">
-      <source src="{{audioUrl}}" type="audio/mpeg">
-      Your browser does not support the audio element.
-    </audio>
+<div id="media-container" class="py-8">
+  {{#if showAudio}}
+  <div class="w-full sm:p-0 sm:m-0 mx-auto-2 lg:px-0 py-4">
+    <div id="audio-player-container">
+      <audio id="audio-player" controls class="w-full">
+        <source src="{{audioUrl}}" type="audio/mpeg">
+        Your browser does not support the audio element.
+      </audio>
+    </div>
   </div>
-</div>
-{{else}}
-<button hx-post="/admin/show/{{showSlug}}/episode/{{episodeSlug}}/buildAudio" hx-swap="outerHTML"
-  class="common-button w-full px-4 py-2 my-2 transition-all duration-300 ease-in-out">
-  Build Audio
-</button>
-{{/if}}
+  {{else}}
+  <button hx-post="/admin/show/{{showSlug}}/episode/{{episodeSlug}}/buildAudio" hx-swap="outerHTML"
+    hx-target="#media-container" class="common-button w-full px-4 py-2 my-2 transition-all duration-300 ease-in-out">
+    Build Audio
+  </button>
+  {{/if}}
 
-{{#if showVideo}}
-<div class="w-full">
-  <div id="video-player-container">
-    <video id="video-player" controls class="w-full">
-      <source src="{{videoUrl}}" type="video/mp4">
-      Your browser does not support the video element.
-    </video>
+  {{#if showVideo}}
+  <div class="w-full py-4">
+    <div id="video-player-container">
+      <video id="video-player" controls class="w-full">
+        <source src="{{videoUrl}}" type="video/mp4">
+        Your browser does not support the video element.
+      </video>
+    </div>
   </div>
-</div>
-{{/if}}
+  {{/if}}
 
-{{#if showUploadVideoButton}}
-<div class="w-full">
-  <form action="{{uploadUrl}}" method="POST" enctype="multipart/form-data" hx-post="{{uploadUrl}}" hx-swap="outerHTML">
-    <input type="file" name="video" accept=".mov" required />
-    <button type="submit" class="common-button w-full px-4 py-2 my-2 transition-all duration-300 ease-in-out">Upload
-      Video</button>
-  </form>
+  {{#if showUploadVideoButton}}
+  <div class="w-full py-4">
+    <form action="{{uploadUrl}}" method="POST" enctype="multipart/form-data" hx-post="{{uploadUrl}}" hx-swap="outerHTML"
+      hx-target="#media-container">
+      <input type="file" name="video" accept=".mov" required />
+      <button type="submit" class="common-button w-full px-4 py-2 my-2 transition-all duration-300 ease-in-out">Upload
+        Video</button>
+    </form>
+  </div>
+  {{/if}}
 </div>
-{{/if}}
