--- a/src/templates/widgets/media_component.html
+++ b/src/templates/widgets/media_component.html
@@ -9,10 +9,12 @@
     </div>
   </div>
   {{else}}
+  {{#if showVideo}}
   <button hx-post="/admin/show/{{showSlug}}/episode/{{episodeSlug}}/buildAudio" hx-swap="outerHTML"
     hx-target="#media-container" class="common-button w-full px-4 py-2 my-2 transition-all duration-300 ease-in-out">
     Build Audio
   </button>
+  {{/if}}
   {{/if}}
 
   {{#if showVideo}}
@@ -30,7 +32,7 @@
   <div class="w-full py-4">
     <form action="{{uploadUrl}}" method="POST" enctype="multipart/form-data" hx-post="{{uploadUrl}}" hx-swap="outerHTML"
       hx-target="#media-container">
-      <input type="file" name="video" accept=".mov" required />
+      <input type="file" name="video" accept=".mp4" required />
       <button type="submit" class="common-button w-full px-4 py-2 my-2 transition-all duration-300 ease-in-out">Upload
         Video</button>
     </form>
